--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
               <img src="https://img.icons8.com/small/28/000000/marker.png" />
               <div class="info">
                 <div class="head">Address</div>
-                <div class="sub-title">Lucknow, Maharashtra</div>
+                <div class="sub-title">Lucknow, Uttar Pradesh</div>
               </div>
             </div>
             <div class="row">
               <img src="https://img.icons8.com/small/28/000000/new-post.png" />
               <div class="info">
                 <div class="head">Email</div>
-                <div class="sub-title">saiharsha.varma2020@vitstudent.ac.in</div>
+                <div class="sub-title">shubh.mittal2020@vitstudent.ac.in</div>
               </div>
             </div>
           </div>
