--- a/index.html
+++ b/index.html
@@ -171,6 +171,43 @@
     </div>
   </section>
 
+  
+  <section class=" d-flex flex-column" id="skills">
+    <div class="p-lg-5 p-3 skill-cover">
+     <h3 class="text-center text-white">Coding Skills</h3>
+     <div class="row text-center my-auto "> 
+         <div class="col-md-3 col-sm-6">
+             <div class="skill-item">
+                 <i class="fa fa-html5 fa-5x"></i>
+                 <h2><span class="counter"> 92 </span><span>%</span></h2>
+                 <p>Web Development</p>
+             </div>
+         </div>
+         <div class="col-md-3 col-sm-6">
+             <div class="skill-item">
+                 <i class="fa fa-css3 fa-5x"></i>
+                 <h2><span class="counter"> 87 </span><span>%</span></h2>
+                 <p>Machine Learning</p>
+             </div>
+         </div>
+         <div class="col-md-3 col-sm-6">
+             <div class="skill-item">
+                 <i class="fa fa-code fa-5x"></i>
+                 <h2><span class="counter"> 89 </span><span>%</span></h2>
+                 <p>Competetive programming</p>
+             </div>
+         </div>
+         <div class="col-md-3 col-sm-6">
+             <div class="skill-item">
+                 <i class="fa fa-globe fa-5x"></i>
+                 <h2><span class="counter"> 81 </span><span>%</span></h2>
+                 <p>Search Engine Optimization</p>
+             </div>
+         </div>
+     </div>
+    </div> 
+ </section>
+
   <section class="education" id="education">
 
     <h1 class="heading">My <span>Education</span></h1>
